# uniexam

./: .env  .env.example  .gitignore  APIDocument.md  README.md  app.py  app_legacy.py  english_comments.txt  examctl.py  install.sh  migrate_question_data.py  mkdocs.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: build_executables.yml  docs.yml
app/: admin_routes.py  main.py  websocket_routes.py
app/core/: __init__.py  config.py  interfaces.py  rate_limiter.py  security.py
app/crud/: __init__.py  json_repository.py  mysql_repository.py  paper.py  paper_crud.py  postgres_repository.py  qb.py  qb_crud.py  redis_repository.py  settings.py  settings_crud.py  sqlite_repository.py  user.py  user_crud.py
app/models/: __init__.py  audit_log_models.py  config_models.py  enums.py  paper_models.py  qb_models.py  token_models.py  user_models.py
app/services/: __init__.py  audit_logger.py  websocket_manager.py
app/utils/: __init__.py  export_utils.py  helpers.py
data/: settings.json  users_db.json
docs/: CONTRIBUTING.md  api_permissions.md  index.md
docs/api/: admin.md  index.md  user_exam.md
site/: 404.html  index.html
site/CONTRIBUTING/: index.html
site/api/: index.html
site/api/admin/: index.html
site/api/user_exam/: index.html
site/search/: search_index.json
tests/: __init__.py
tests/cli/: __init__.py  test_examctl.py
tests/core/: __init__.py  test_rate_limiter.py  test_security.py
tests/crud/: __init__.py  test_json_repository.py  test_paper_crud.py  test_qb_crud.py  test_settings_crud.py  test_user_crud.py
tests/services/: __init__.py  test_audit_logger.py  test_websocket_manager.py
tests/utils/: __init__.py  test_export_utils.py  test_helpers.py
