[project]
name = "my-project"
version = "0.1.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=0.21.0",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.2.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "aioredis>=2.0.0",
    "aiosqlite>=0.19.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
default_section = "THIRDPARTY"
known_first_party = ["app"]
atomic = true
lines_after_imports = 2
filter_files = true

[tool.ruff]
line-length = 88
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex (consider refactoring later if many)
    "E203", # whitespace before ':' (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
